--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-05  Marius Andreiana <marius galuna.ro>
+
+        * ro.po: updated
+
 2004-09-04  Hendrik Richter <hendrik@gnome-de.org>
 
 	* de.po: Updated German translation
