updated by Misu Moldovan
2004-09-05  Marius Andreiana <marius galuna.ro>

        * ro.po: updated by Misu Moldovan

--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,4 +1,9 @@
+2004-09-05  Marius Andreiana <marius galuna.ro>
+
+        * ro.po: updated by Misu Moldovan
+
 2004-08-31  Runa Bhattacharjee	<runab@redhat.com>
+
 	* bn.po: Updated Bengali (bn) Translation
 
 2004-08-29  Pawan Chitrakar  <pawan@nplinux.org>
