--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -2,6 +2,10 @@
 
 	* nn.po: Updated Norwegian Nynorsk translation.
 
+2004-09-06  Åsmund Skjæveland <aasmunds@fys.uio.no>
+
+	* nn.po: Updated Norwegian Nynorsk translation.
+
 2004-09-05  Marius Andreiana <marius galuna.ro>
 
         * ro.po: updated by Misu Moldovan
