--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-06  Åsmund Skjæveland <aasmunds@fys.uio.no>
+
+	* nn.po: Updated Norwegian Nynorsk translation.
+
 2004-09-05  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
