--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-07  Adam Weinberger  <adamw@gnome.org>
+
+	* en_CA.po: Updated Canadian English translation.
+
 2004-09-06  Åsmund Skjæveland <aasmunds@fys.uio.no>
 
 	* nn.po: Updated Norwegian Nynorsk translation.
