--- a/po-properties/en_CA.po
+++ b/po-properties/en_CA.po
@@ -1,15 +1,15 @@
 # English/Canada translation of gtk+-properties
-# Copyright (C) 2004
-# This file is distributed under the same license as the PACKAGE package.
+# Copyright (C) 2004 Adam Weinberger and the GNOME Foundation
+# This file is distributed under the same license as the gtk+ package.
 # Adam Weinberger <adamw@FreeBSD.org>, 2004.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: gtk+-properties\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-08-25 13:27-0400\n"
-"PO-Revision-Date: 2004-03-07 22:53-0500\n"
-"Last-Translator: Alexander Winston <alexander.winston@comcast.net>\n"
+"POT-Creation-Date: 2004-09-07 16:26-0400\n"
+"PO-Revision-Date: 2004-09-07 22:53-0400\n"
+"Last-Translator: Adam Weinberger <adamw@gnome.org>\n"
 "Language-Team: English/Canada <adamw@FreeBSD.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -288,7 +288,7 @@ msgid ""
 "Horizontal position of child in available space. 0.0 is left aligned, 1.0 is "
 "right aligned"
 msgstr ""
-"Horizontal position of child in available space. 0.0 is left aligned, 1.0 is "
+"Horizontal position of the child in available space. 0.0 is left aligned, 1.0 is "
 "right aligned"
 
 #: gtk/gtkalignment.c:127
@@ -300,7 +300,7 @@ msgid ""
 "Vertical position of child in available space. 0.0 is top aligned, 1.0 is "
 "bottom aligned"
 msgstr ""
-"Vertical position of child in available space. 0.0 is top aligned, 1.0 is "
+"Vertical position of the child in available space. 0.0 is top aligned, 1.0 is "
 "bottom aligned"
 
 #: gtk/gtkalignment.c:136
@@ -448,7 +448,7 @@ msgid ""
 "How to layout the buttons in the box. Possible values are default, spread, "
 "edge, start and end"
 msgstr ""
-"How to layout the buttons in the box. Possible values are default, spread, "
+"How to lay out the buttons in the box. Possible values are default, spread, "
 "edge, start and end"
 
 #: gtk/gtkbbox.c:165
