Updated Olde Englisc translation.
2004-09-08  David Lodge <dave@cirt.net>

        * ang.po: Updated Olde Englisc translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-08  David Lodge <dave@cirt.net>
+
+	* ang.po: Updated Olde Englisc translation.
+
 2004-09-06  Åsmund Skjæveland <aasmunds@fys.uio.no>
 
 	* nn.po: Updated Norwegian Nynorsk translation.
